# peek

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: border.rs  clock.rs  main.rs  output.rs
